Using the result.html for displaying status updates

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -32,10 +32,16 @@
                    href="#nav-credentials" role="tab" aria-controls="nav-credentials" aria-selected="false">Credentials</a>
             </div>
         </nav>
+
+
+        <!----------------->
+        <!-- FILE UPLOAD -->
+        <!----------------->
+
         <div class="tab-content" id="nav-tabContent">
             <div class="tab-pane fade show active" id="nav-files" role="tabpanel"
                  aria-labelledby="nav-files-tab">
-                <form action="#" th:action="@{/file-upload}" enctype="multipart/form-data" method="POST">
+                <form action="#" th:action="@{/uploadFile}" enctype="multipart/form-data" method="POST">
                     <div class="container">
                         <div class="row" style="margin: 1em;">
                             <div class="col-sm-2">
