--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -66,12 +66,12 @@
                         </tr>
                         </thead>
                         <tbody>
-                        <tr>
+                        <tr th:each="file : ${files}">
                             <td>
                                 <a target="_blank" class="btn btn-success">View</a>
-                                <a class="btn btn-danger">Delete</a>
+                                <a th:href="@{/deleteFile(id=${file.getFileId()})}"  class="btn btn-danger">Delete</a>
                             </td>
-                            <th scope="row">ExampleFile.txt</th>
+                            <th th:text="${file.fileName}" scope="row">ExampleFile.txt</th>
                         </tr>
                         </tbody>
                     </table>
