--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -68,7 +68,7 @@
                         <tbody>
                         <tr th:each="file : ${files}">
                             <td>
-                                <a target="_blank" class="btn btn-success">View</a>
+                                <a th:href="@{/downloadFile(id=${file.getFileId()})}" target="_blank" class="btn btn-success">View</a>
                                 <a th:href="@{/deleteFile(id=${file.getFileId()})}"  class="btn btn-danger">Delete</a>
                             </td>
                             <th th:text="${file.fileName}" scope="row">ExampleFile.txt</th>
