adding new Credentials implemented

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -179,14 +179,14 @@
                         </tr>
                         </thead>
                         <tbody>
-                        <tr>
+                        <tr th:each="credentials : ${allCredentials}">
                             <td>
                                 <button type="button" class="btn btn-success">Edit</button>
                                 <a class="btn btn-danger">Delete</a>
                             </td>
-                            <th scope="row">Example Credential URL</th>
-                            <td>Example Credential Username</td>
-                            <td>Example Credential Password</td>
+                            <th th:text="${credentials.getUrl()}" scope="row">Example Credential URL</th>
+                            <td th:text="${credentials.getUserName()}">Example Credential Username</td>
+                            <td th:text="${credentials.getPassword()}">Example Credential Password</td>
                         </tr>
                         </tbody>
                     </table>
@@ -203,21 +203,21 @@
                                 </button>
                             </div>
                             <div class="modal-body">
-                                <form action="#" method="POST">
-                                    <input type="hidden" name="credentialId" id="credential-id">
+                                <form action="#" th:action="@{/addCredentials}" th:object="${credentials}" method="POST">
+                                    <input th:field="*{credentialsId}" type="hidden" name="credentialId" id="credential-id">
                                     <div class="form-group">
                                         <label for="note-title" class="col-form-label">URL</label>
-                                        <input type="text" name="url" class="form-control" id="credential-url"
+                                        <input th:field="*{url}" type="text" name="url" class="form-control" id="credential-url"
                                                maxlength="100" required>
                                     </div>
                                     <div class="form-group">
                                         <label for="note-title" class="col-form-label">Username</label>
-                                        <input type="text" name="username" class="form-control"
+                                        <input th:field="*{userName}" type="text" name="username" class="form-control"
                                                id="credential-username" maxlength="30" required>
                                     </div>
                                     <div class="form-group">
                                         <label for="note-title" class="col-form-label">Password</label>
-                                        <input type="text" name="password" class="form-control"
+                                        <input th:field="*{password}" type="text" name="password" class="form-control"
                                                id="credential-password" maxlength="30" required>
                                     </div>
                                     <button id="credentialSubmit" type="submit" class="d-none"></button>
