--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -16,7 +16,7 @@
 
             <h1 class="display-5">Sign Up</h1>
             <form action="#" th:action="@{/signup}" method="POST">
-                <div class="alert alert-dark" th:if="${signupSuccess}">
+                <div id="successMessage" class="alert alert-dark" th:if="${signupSuccess}">
                     You successfully signed up! Please continue to the <a>login</a> page.
                 </div>
                 <div class="alert alert-danger" th:if="${signupError}">
@@ -42,7 +42,7 @@
                         <input type="password" name="password" class="form-control" id="inputPassword" placeholder="Enter Password" maxlength="20" required>
                     </div>
                 </div>
-                <button type="submit" class="btn btn-primary">Sign Up</button>
+                <button id="submitButton" type="submit" class="btn btn-primary">Sign Up</button>
             </form>
         </div>
     </body>
