Added SeleniumTests for NotePage

--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -13,12 +13,12 @@
             <div th:if="${success}" class="alert alert-success fill-parent">
                 <h1 class="display-5">Success</h1>
                 <span th:text="${message}">Default Success Message</span>
-                <span>Click <a th:href="@{/home}">here</a> to continue.</span>
+                <span >Click <a id="theContinueButtonOnSuccess" th:href="@{/home}">here</a> to continue.</span>
             </div>
             <div th:unless="${success}" class="alert alert-danger fill-parent">
                 <h1 class="display-5">Error</h1>
                 <span th:text="${message}" >Default Error Message</span>
-                <span>Click <a th:href="@{/home}">here</a> to continue.</span>
+                <span >Click <a id="theContinueButtonOnError" th:href="@{/home}">here</a> to continue.</span>
             </div>
         </div>
     </body>
