--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -24,9 +24,9 @@
     <div id="contentDiv" style="clear: right;">
         <nav style="clear: right;">
             <div class="nav nav-tabs" id="nav-tab" role="tablist">
-                <a class="nav-item nav-link active" id="nav-files-tab" data-toggle="tab" href="#nav-files"
+                <a class="nav-item nav-link active" id="navFilesTab" data-toggle="tab" href="#nav-files"
                    role="tab" aria-controls="nav-files" aria-selected="true">Files</a>
-                <a class="nav-item nav-link" id="nav-notes-tab" data-toggle="tab" href="#nav-notes" role="tab"
+                <a class="nav-item nav-link" id="navNotesTab" data-toggle="tab" href="#nav-notes" role="tab"
                    aria-controls="nav-notes" aria-selected="false">Notes</a>
                 <a class="nav-item nav-link" id="nav-credentials-tab" data-toggle="tab"
                    href="#nav-credentials" role="tab" aria-controls="nav-credentials" aria-selected="false">Credentials</a>
@@ -40,7 +40,7 @@
 
         <div class="tab-content" id="nav-tabContent">
             <div class="tab-pane fade show active" id="nav-files" role="tabpanel"
-                 aria-labelledby="nav-files-tab">
+                 aria-labelledby="navFilesTab">
                 <form action="#" th:action="@{/uploadFile}" enctype="multipart/form-data" method="POST">
                     <div class="container">
                         <div class="row" style="margin: 1em;">
@@ -84,7 +84,7 @@
             <!--------------->
 
             <div class="tab-pane fade" id="nav-notes" role="tabpanel" aria-labelledby="nav-notes-tab">
-                <button style="margin: 0.25em;" type="button" class="btn btn-info float-right"
+                <button id="showNoteModalButton" style="margin: 0.25em;" type="button" class="btn btn-info float-right"
                         onclick="showNoteModal()">
                     + Add a New Note
                 </button>
@@ -146,7 +146,7 @@
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close
                                 </button>
-                                <button type="button" class="btn btn-primary"
+                                <button id="submitNoteModal" type="button" class="btn btn-primary"
                                         onclick="$('#noteSubmit').click();">Save changes
                                 </button>
                             </div>
